--- a/Game.html
+++ b/Game.html
@@ -1,319 +1,14 @@
 <!doctype html>
 <html>
-
 <head>
 	<meta charset="UTF-8" />
-	<title>Yellow Square</title>
+	<link rel="shortcut icon" href="./assets/square.ico" type="image/x-icon">
 	<script src="sprite.js"></script>
-	<style>
-		canvas {
-			position: absolute;
-			top: 30px;
-			bottom: 0px;
-			left: 350px;
-			right: 0px;
-		}
-	</style>
+	<link href="./styles/styles.css" rel="stylesheet">
+
+	<title>Yellow Square Game</title>
 </head>
-
 <body>
-
-	<script>
-		//variáveis do jogo
-		var canvas,
-			ctx,
-			ALTURA,
-			LARGURA,
-			frames = 0,
-			maxPulos = 3,
-			velocidade = 6,
-			estadoAtual,
-			record,
-			img,
-
-			estados = {
-				jogar: 0,
-				jogando: 1,
-				perdeu: 2
-			},
-
-			chao = {
-				//atributos
-				y: 550,
-				altura: 50,
-				cor: "#123330",
-
-				//metodos do chao (estatico)
-				desenha: function () {
-					ctx.fillStyle = this.cor;
-					ctx.fillRect(0, this.y, LARGURA, this.altura);
-				}
-			},
-
-			bloco = {
-				//atributos
-				x: 50,
-				y: 0,
-				altura: 50,
-				largura: 50,
-				cor: "#e4ff00",
-				gravidade: 1.6,
-				velocidade: 0,
-				forcaDoPulo: 23.6,
-				qntPulos: 0,
-				score: 0,
-
-				//atulizar o bloco
-				atualiza: function () {
-					this.velocidade += this.gravidade;
-					this.y += this.velocidade;
-
-					if (this.y > chao.y - this.altura && estadoAtual != estados.perdeu) {
-						this.y = chao.y - this.altura;
-						this.qntPulos = 0;
-						this.velocidade = 0;
-					}
-				},
-
-				//pular
-				pula: function () {
-					if (this.qntPulos < maxPulos) {
-						this.velocidade = - this.forcaDoPulo;
-						this.qntPulos++;
-					}
-				},
-
-				//resetar o jogo
-				reset: function () {
-					this.velocidade = 0;
-					this.y = 0;
-
-					if (this.score > record) {
-						localStorage.setItem("record", this.score);
-						record = this.score;
-					}
-
-					this.score = 0;
-				},
-
-
-				//metodos do bloco
-				desenha: function () {
-					ctx.fillStyle = this.cor;
-					ctx.fillRect(this.x, this.y, this.largura, this.altura);
-				}
-			},
-
-			obstaculos = {
-				_obs: [],
-
-				//azul, vermelho, verde, rosa, laranja
-				cores: ["#0008ff", "#ff0000", "#ff0000", "#ff0066", "#ff6f00"],
-				tempoInsere: 0,
-
-
-				insere: function () {
-					this._obs.push({
-						x: LARGURA,
-						//largura: 30 + Math.floor(21 * Math.random()),
-						largura: 50,
-						altura: 30 + Math.floor(120 * Math.random()),
-						cor: this.cores[Math.floor(5 * Math.random())]
-					});
-					//itens de forma automatica
-					this.tempoInsere = 20 + Math.floor(31 * Math.random());
-				},
-
-				atualiza: function () {
-					if (this.tempoInsere == 0)
-						this.insere();
-					else
-						this.tempoInsere--;
-
-					for (var i = 0, tam = this._obs.length; i < tam; i++) {
-						var obs = this._obs[i];
-						obs.x -= velocidade;
-
-						if (bloco.x < obs.x + obs.largura && bloco.x + bloco.largura >= obs.x &&
-							bloco.y + bloco.altura >= chao.y - obs.altura)
-							estadoAtual = estados.perdeu;
-
-
-						else if (obs.x == 0)										
-							bloco.score++;
-
-
-						else if (obs.x <= -obs.largura) {
-							this._obs.splice(i, 1);
-							tam--;
-							i--;
-						}
-					}
-				},
-
-				limpa: function () {
-					this._obs = []
-				},
-
-				desenha: function () {
-					for (var i = 0, tam = this._obs.length; i < tam; i++) {
-						var obs = this._obs[i];
-						ctx.fillStyle = obs.cor;
-						ctx.fillRect(obs.x, chao.y - obs.altura, obs.largura, obs.altura);
-					}
-				}
-			};
-
-		//quando clica
-		function clique(event) {
-			if (estadoAtual == estados.jogando)
-				bloco.pula();
-
-			else if (estadoAtual == estados.jogar) {
-				estadoAtual = estados.jogando;
-			}
-
-			else if (estadoAtual == estados.perdeu && bloco.y >= 2 * ALTURA) {
-				estadoAtual = estados.jogar;
-				obstaculos.limpa();
-				bloco.reset();
-			}
-
-		}
-
-
-		//função que starta o jogo
-		function main() {
-			ALTURA = window.innerHeight;
-			LARGURA = window.innerWidth;
-
-			if (LARGURA >= 500) {
-				LARGURA = 600;
-				ALTURA = 600;
-			}
-
-			//fundo
-			canvas = document.createElement("canvas");
-			canvas.width = LARGURA;
-			canvas.height = ALTURA;
-			canvas.style.border = "3px solid #3e5955";
-
-			//tudo que desenhar vai ser 2d
-			ctx = canvas.getContext("2d")
-			document.body.appendChild(canvas);
-
-			//verificar se a pessoa clicou
-			document.addEventListener("mousedown", clique);
-
-			estadoAtual = estados.jogar;
-
-			//marcar record
-			record = localStorage.getItem("record");
-			if (record == null)
-				record = 0;
-
-			//imagem do fundo
-			img = new Image();
-			img.src = "assets/fundo.png";
-
-			//iniciar o jogo
-			roda();
-		}
-
-		//função que roda o jogo
-		function roda() {
-			atualiza();
-			desenha();
-
-			window.requestAnimationFrame(roda);
-		}
-		//função que atualiza o status
-		function atualiza() {
-			frames++;
-			bloco.atualiza();
-
-			//pra atualizar o os obstaculos a cada start
-			if (estadoAtual == estados.jogando)
-				obstaculos.atualiza();
-		}
-		//função que desenha tudo
-		function desenha() {
-
-			//fundo de antes:
-			//ctx.fillStyle = "#80daff";
-			//ctx.fillRect(0, 0, LARGURA, ALTURA);
-
-			//fundo de imagem
-			bg.desenha(0, 0);
-
-
-			//score
-
-			//cor do score
-			ctx.fillStyle = "#ff0000";
-
-			//fonte do score
-			ctx.font = "50px Arial";
-
-			//tamanho do score
-			ctx.fillText(bloco.score, 530, 60);
-
-			//Resetar e Iniciar
-			if (estadoAtual == estados.jogar) {
-				ctx.fillStyle = "#137813";
-				ctx.fillText("Start", LARGURA / 2 - 50, ALTURA / 2 - 50, 100, 50);
-			}
-			else if (estadoAtual == estados.perdeu) {
-				ctx.fillStyle = "white";
-				ctx.fillRect(LARGURA / 2 - 50, ALTURA / 2 - 50, 100, 100);
-
-				//desenhar o score dentro do botao vermelho
-				ctx.save();
-				ctx.translate(LARGURA / 2, ALTURA / 2);
-				ctx.fillStyle = "red";
-
-
-				//mensagem de new record e record
-
-				//mostrar new record
-				if (bloco.score > record)
-					ctx.fillText("New record!", -150, -65);
-
-				//mostrar record
-				else if (record < 10)
-					ctx.fillText("Record " + record, -99, -65);
-
-				else if (record >= 10 && record < 100)
-					ctx.fillText("Record " + record, -112, -65);
-
-				else ctx.fillText("Record " + record, -125, -65);
-
-
-				//caso o score seja de mais de 2 digitos
-				if (bloco.score < 10)
-					ctx.fillText(bloco.score, -13, 19);
-
-				else if (bloco.score >= 10 && bloco.score < 100)
-					ctx.fillText(bloco.score, -26, 19);
-
-				else ctx.fillText(bloco.score, -13, 19);
-
-
-				ctx.restore();
-			}
-
-			//desenhar o chao e bloco
-			else if (estadoAtual == estados.jogando)
-				obstaculos.desenha();
-
-			chao.desenha();
-			bloco.desenha();
-		}
-
-
-		//inicializa o jogo
-		main();
-
-	</script>
+	<script src="script.js"></script>
 </body>
 <html>
